Fix launcher and launch site wizard style